<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~  Copyright 2017 Otavio R. Piske <angusyoung@gmail.com>
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~  http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.maestro</groupId>
    <artifactId>maestro-java</artifactId>
    <packaging>pom</packaging>
    <version>1.5.3-SNAPSHOT</version>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <api.version.site>1.5</api.version.site>
    </properties>

    <repositories>
        <repository>
            <id>Eclipse Paho Repo</id>
            <url>https://repo.eclipse.org/content/repositories/paho-releases/</url>
        </repository>

        <repository>
            <id>orpiske-repo</id>
            <url>https://dl.bintray.com/orpiske/libs-release</url>
        </repository>

    </repositories>

    <scm>
        <developerConnection>scm:git:git@github.com:maestro-performance/maestro-java.git</developerConnection>
        <url>https://github.com/maestro-performance/maestro-java</url>
        <tag>HEAD</tag>
    </scm>

    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>manual</distribution>
            <comments>A business-friendly OSS license</comments>
        </license>
    </licenses>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.6.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                    <compilerArgument>-Xlint:all</compilerArgument>
                    <showWarnings>true</showWarnings>
                    <showDeprecation>true</showDeprecation>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <modules>
        <module>maestro-common</module>
        <module>maestro-contrib</module>
        <module>maestro-plotters</module>
        <module>maestro-client</module>
        <module>maestro-tests</module>
        <module>maestro-exporter</module>
        <module>maestro-workers</module>
        <module>maestro-worker</module>
        <module>maestro-test-scripts</module>
        <module>maestro-reports</module>
        <module>maestro-agent</module>
        <module>maestro-inspector</module>
        <module>maestro-inspectors</module>
        <module>maestro-cli</module>

    </modules>

    <profiles>
        <profile>
            <id>Delivery</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>

            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-release-plugin</artifactId>
                        <version>2.5.3</version>
                    </plugin>
                </plugins>
            </build>

            <distributionManagement>
                <repository>
                    <id>bintray-orpiske-libs-release</id>
                    <name>orpiske-libs-release</name>
                    <url>https://api.bintray.com/maven/orpiske/libs-release/maestro-java/;publish=1</url>
                </repository>
            </distributionManagement>
        </profile>


        <profile>
            <id>Site</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-site-plugin</artifactId>
                        <version>3.7.1</version>
                        <dependencies>
                            <dependency>
                                <groupId>org.apache.maven.wagon</groupId>
                                <artifactId>wagon-ssh</artifactId>
                                <version>3.1.0</version>
                            </dependency>
                        </dependencies>
                    </plugin>
                </plugins>
            </build>

            <distributionManagement>
                <site>
                    <id>orpiske.net</id>
                    <name>maestro-java</name>
                    <url>${orpiske.site}/files/javadoc/maestro-java-${api.version.site}/</url>
                </site>
            </distributionManagement>

            <reporting>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>3.0.1</version>

                        <configuration>
                            <!-- force links to Java 8 documentation (should happen automatically
                                but doesn't) -->
                            <javaApiLinks>
                                <property>
                                    <name>api_1.8</name>
                                    <value>https://docs.oracle.com/javase/8/docs/api/</value>
                                </property>
                            </javaApiLinks>
                            <!-- add license notice -->
                            <bottom>
                                <![CDATA[This documentation was released into the public domain.]]>
                            </bottom>
                            <tags>
                                <tag>
                                    <name>apiNote</name>
                                    <placement>a</placement>
                                    <head>API Note:</head>
                                </tag>
                                <tag>
                                    <name>implSpec</name>
                                    <placement>a</placement>
                                    <head>Implementation Requirements:</head>
                                </tag>
                                <tag>
                                    <name>implNote</name>
                                    <placement>a</placement>
                                    <head>Implementation Note:</head>
                                </tag>
                                <tag><name>param</name></tag>
                                <tag><name>return</name></tag>
                                <tag><name>throws</name></tag>
                                <tag><name>since</name></tag>
                                <tag><name>version</name></tag>
                                <tag><name>serialData</name></tag>
                                <tag><name>see</name></tag>
                            </tags>
                        </configuration>
                    </plugin>

                </plugins>
            </reporting>

        </profile>
    </profiles>


</project>